feat(chore) : use official docling jar for integration